ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainflux-ingress-rewrite
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: manager
          servicePort: 80
